force-app/main/default/objects/FO_DST_Release_Overview__c/FO_DST_Release_Overview__c.object-meta.xml
<CustomObject>
    <label>FO DST Release Overview</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FO DST Release Overview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>