force-app/main/default/objects/FO_DST_Release_Overview__c/fields/Extra_Release_Info__c.field-meta.xml
<CustomField>
    <fullName>Extra_Release_Info__c</fullName>
    <label>Extra Release Info</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>