force-app/main/default/objects/FO_DST_Release_Overview__c/fields/Reason_Difference__c.field-meta.xml
<CustomField>
    <fullName>Reason_Difference__c</fullName>
    <label>Reason Difference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>New functionality of CR with urgent demand</fullName>
            </value>
            <value>
                <fullName>Change functionality of CR with urgent demand</fullName>
            </value>
            <value>
                <fullName>Release not acceptable for production</fullName>
            </value>
            <value>
                <fullName>Scope change of release</fullName>
            </value>
            <value>
                <fullName>NN resource capacity issue</fullName>
            </value>
            <value>
                <fullName>NN could not release as release defects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>