force-app/main/default/objects/FO_DST_Release_Overview__c/fields/Release_Type__c.field-meta.xml
<CustomField>
    <fullName>Release_Type__c</fullName>
    <label>Release Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly Release</fullName>
            </value>
            <value>
                <fullName>Maintenance Release</fullName>
            </value>
            <value>
                <fullName>Emergency Maintenance Release</fullName>
            </value>
            <value>
                <fullName>Security Patch Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>