force-app/main/default/objects/FO_DST_Release_Overview__c/fields/Scope_of_Release__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Release__c</fullName>
    <label>Scope of Release</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Design Change</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>